# mikmod

./: CMakeLists.txt  CMakePresets.json
libmikmod/: CMakeLists.txt  config.h.cmake  config.h.in  configure.ac
libmikmod/drivers/: drv_ds.c  drv_win.c  drv_xaudio2.c
libmikmod/examples/: CMakeLists.txt
libmikmod/examples/playInteractive/: play_int.c
libmikmod/include/: mikmod.h  mikmod_internals.h
libmikmod/mmio/: mmalloc.c
libmikmod/playercode/: mdreg.c  virtch.c
mikmod/: CMakeLists.txt
mikmod/win32/MSVC6/: mikmod.dsp
mikmod/win32/VS8/: mikmod.vcproj
mikmod/win32/VisualStudio/: mikmod.sln  mikmod.vcxproj  mikmod.vcxproj.filters
